--- a/app/src/main/res/layout/content_task_.xml
+++ b/app/src/main/res/layout/content_task_.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_task_"
@@ -21,11 +21,10 @@
         android:layout_marginBottom="2dp"
         card_view:cardCornerRadius="2dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/shape_bg_white_rounded_rect"
-            android:orientation="vertical"
             android:padding="16dp">
 
             <TextView
@@ -54,6 +53,7 @@
                 android:id="@+id/txt_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/enter_task_title"
                 android:text="Task description"
                 android:textColor="@color/colorPrimary"
                 android:textSize="14sp"
@@ -77,16 +77,13 @@
                     android:textColor="@color/colorPrimary"
                     android:textSize="14sp"
                     android:textStyle="bold" />
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
                 <EditText
                     android:id="@+id/enter_date"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
+                    android:layout_below="@+id/txt_date"
+                    android:layout_toStartOf="@+id/gambar_calendar"
                     android:focusable="false"
                     android:hint="Set Date"
                     android:inputType="date"
@@ -94,35 +91,20 @@
 
                 <ImageButton
                     android:id="@+id/gambar_calendar"
-                    android:layout_width="wrap_content"
+                    android:layout_width="35dp"
                     android:layout_height="35dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_toEndOf="@+id/enter_date"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/txt_date"
                     android:background="@android:color/transparent"
                     android:onClick="calendar"
                     android:src="@drawable/ic_calendar" />
 
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/txt_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/description"
-                android:layout_marginStart="80dp"
-                android:layout_toEndOf="@+id/txt_date"
-                android:text="Deadline time"
-                android:textColor="@color/colorPrimary"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
             <EditText
                 android:id="@+id/enter_time"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/txt_time"
-                android:layout_marginStart="80dp"
-                android:layout_toEndOf="@+id/txt_date"
+                android:layout_below="@+id/enter_date"
+                android:layout_toStartOf="@+id/gambar_calendar"
                 android:focusable="false"
                 android:hint="Set Time"
                 android:theme="@style/EditText" />
@@ -130,24 +112,24 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
-                android:layout_below="@+id/txt_date"
-                android:layout_marginLeft="8dp"
-                android:layout_toEndOf="@+id/enter_time"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/enter_date"
                 android:background="@android:color/transparent"
+                android:onClick="calendar"
                 android:src="@drawable/ic_time" />
 
             <TextView
                 android:id="@+id/txt_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/enter_date"
+                android:layout_below="@+id/enter_time"
                 android:text="Category"
                 android:textColor="@color/colorPrimary"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
-</LinearLayout>
+</RelativeLayout>
