change name "Task_activity" to "TaskActivity"

--- a/app/src/main/res/layout/activity_task_.xml
+++ b/app/src/main/res/layout/activity_task_.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/grey"
     android:fitsSystemWindows="true"
-    tools:context="newbie.irhamdz.todolistsimple.Task_Activity">
+    tools:context="newbie.irhamdz.todolistsimple.TaskActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
