--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,6 @@
         app:elevation="6dp"
         app:fabSize="normal"
         app:layout_anchor="@+id/content_main"
-        app:layout_anchorGravity="bottom|right|end"
-        app:rippleColor="@color/white" />
+        app:layout_anchorGravity="bottom|right|end" />
 
 </android.support.design.widget.CoordinatorLayout>
