finishing layout task

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,15 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="newbie.irhamdz.todolistsimple.MainActivity">
     <!-- Settings, should always be in the overflow -->
-    <item android:id="@+id/action_settings"
+    <!--<item android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
 
     <item
         android:id="@+id/action_search"
-        android:orderInCategory="200"
-        android:title="Search"
         android:icon="@drawable/ic_search"
+        android:orderInCategory="200"
+        android:title="@string/search"
         app:showAsAction="ifRoom"
         />
 
