--- a/app/src/main/res/layout/content_task_.xml
+++ b/app/src/main/res/layout/content_task_.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_task_"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="2dp"
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
@@ -26,10 +27,11 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@drawable/shape_bg_white_rounded_rect"
+                android:orientation="vertical"
                 android:padding="16dp">
 
                 <TextView
@@ -45,7 +47,6 @@
                     android:id="@+id/enter_task_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/txt_title"
                     android:layout_marginBottom="16dp"
                     android:hint="Enter task title here"
                     android:inputType="textNoSuggestions"
@@ -58,18 +59,16 @@
                     android:id="@+id/txt_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/enter_task_title"
                     android:text="Task description"
                     android:textColor="@color/colorPrimary"
                     android:textSize="14sp"
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/description"
+                    android:id="@+id/enter_description"
                     style="@style/FullWidthEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/txt_description"
                     android:layout_marginBottom="16dp"
                     android:hint="Enter description here " />
 
@@ -77,87 +76,103 @@
                     android:id="@+id/txt_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/description"
                     android:text="Deadline"
                     android:textColor="@color/colorPrimary"
                     android:textSize="14sp"
                     android:textStyle="bold" />
 
-                <EditText
-                    android:id="@+id/enter_date"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/txt_date"
-                    android:layout_marginRight="8dp"
-                    android:layout_toStartOf="@+id/gambar_calendar"
-                    android:focusable="false"
-                    android:hint="Set date"
-                    android:inputType="date"
-                    android:theme="@style/EditText" />
+                    android:layout_height="wrap_content">
 
-                <ImageButton
-                    android:id="@+id/gambar_calendar"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_below="@+id/txt_date"
-                    android:layout_marginTop="8dp"
-                    android:background="@android:color/transparent"
-                    android:onClick="calendar"
-                    android:src="@drawable/ic_calendar" />
+                    <EditText
+                        android:id="@+id/enter_date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_toStartOf="@+id/icon_calendar"
+                        android:focusable="false"
+                        android:hint="Set date"
+                        android:inputType="date"
+                        android:theme="@style/EditText" />
 
-                <EditText
-                    android:id="@+id/enter_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/enter_date"
-                    android:layout_marginRight="8dp"
-                    android:layout_toStartOf="@+id/gambar_calendar"
-                    android:focusable="false"
-                    android:hint="Set time"
-                    android:theme="@style/EditText" />
+                    <ImageButton
+                        android:id="@+id/icon_calendar"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginTop="8dp"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/ic_calendar" />
 
-                <ImageButton
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_below="@+id/enter_date"
-                    android:layout_marginTop="8dp"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/ic_time" />
+                    <EditText
+                        android:id="@+id/enter_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/enter_date"
+                        android:layout_marginEnd="8dp"
+                        android:layout_toStartOf="@+id/icon_calendar"
+                        android:focusable="false"
+                        android:hint="Set time"
+                        android:theme="@style/EditText" />
+
+                    <ImageButton
+                        android:id="@+id/icon_time"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_below="@+id/enter_date"
+                        android:layout_marginTop="8dp"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/ic_time" />
+                </RelativeLayout>
 
                 <TextView
                     android:id="@+id/txt_category"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/enter_time"
                     android:layout_marginTop="16dp"
-                    android:text="Category"
+                    android:text="@string/category"
                     android:textColor="@color/colorPrimary"
                     android:textSize="14sp"
                     android:textStyle="bold" />
 
-                <Spinner
-                    android:id="@+id/spinner_category"
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <Spinner
+                        android:id="@+id/spinner_category"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_toStartOf="@+id/add_category_image" />
+
+                    <ImageButton
+                        android:id="@+id/add_category_image"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentEnd="true"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/ic_add_category" />
+
+                </RelativeLayout>
+
+                <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/txt_category"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_toStartOf="@+id/add_category_image" />
+                    android:onClick="tes"
+                    android:text="Tes" />
 
-                <ImageButton
-                    android:id="@+id/add_category_image"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_below="@+id/txt_category"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/ic_add_category" />
+                <TextView
+                    android:id="@+id/tes_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="tes" />
 
-
-            </RelativeLayout>
+            </LinearLayout>
 
         </ScrollView>
     </android.support.v7.widget.CardView>
-</RelativeLayout>
+</LinearLayout>
